Use node-forge to support Java's RSA/ECB/OAEPWithSHA-256AndMGF1Padding - and take a massive performance hit in the process.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "envelope-encryption-tools",
   "version": "0.1.0",
-  "main": "./lib/main.js",
+  "main": "lib/main.js",
   "description": "Lightweight encryption toolkit to support envelope encryption schemes",
   "engines": {
     "node": ">= 6"
+  },
+  "dependencies": {
+    "node-forge": "0.7.1"
   },
   "devDependencies": {
     "mocha": "= 3.5.0",
