--- a/interoperability/package.json
+++ b/interoperability/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aws-sdk": "= 2.106.0",
-    "node-rsa": "= 0.4.2"
+    "node-rsa": "= 0.4.2",
+    "rimraf": "= 2.6.1"
   }
 }
